fix: Mobile View Page Actions button layout issue

--- a/frappe/public/less/page.less
+++ b/frappe/public/less/page.less
@@ -200,6 +200,7 @@ select.input-sm {
 	.page-actions {
 		position: absolute;
 		float: right;
+		right: 5px;
 		padding-right: 0px;
 	}
 
